--- a/java8-example/pom.xml
+++ b/java8-example/pom.xml
@@ -2,11 +2,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.hawk.example</groupId>
-	<artifactId>java-example</artifactId>
+	<artifactId>java8-example</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>java-example</name>
+	<name>java8-example</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
